add static url at vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     {
       "src": "/(.*)",
       "dest": "/app.js"
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
     }
   ]
 }
