--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "src": "/app.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "/public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -11,7 +15,7 @@
       "dest": "/app.js"
     },
     {
-      "src": "/static/(.*)",
+      "src": "/(.+)",
       "dest": "/static/$1"
     }
   ]
