--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "/static/**",
+      "src": "/public/**",
       "use": "@vercel/static"
     }
   ],
